booki/css/style.css
/*** Général ***/
/*** Font ***/
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');

/*** Color ***/
:root {
    --first-color: #0065FC; /* var(--first-color) */
    --second-color: #DEEBFF; /* var(--second-color) */
    --third-color: #F2F2F2; /* var(--third-color) */
    --fourth-color: #fff; /* var(--fourth-color) */
}

/* * {
    border: 1px red solid;
} */

body {
    margin: auto;
    padding: 0;
    box-sizing: border-box;
    width: 1400px;
    max-width: 100%;
    font-family: 'Raleway', sans-serif;
}
h2, h3, .filter, .filter button, input, .footer h3 {
    font-weight: 700;
}
h2 {
    font-size: 1.37em;
    line-height: 1.62em;
}
h3 {
    line-height: 1.19em;
}
p {
    font-size: 0.87em;
    margin-top: 5px;
}
.filter, .filter button {
    font-size: 1em;
    line-height: 1.25em;
}
input, .footer h3 {
    font-size: 1.12em;
    line-height: 1.31em;
}
.top-section p, .footer li {
    font-weight: 400;
    font-size: 1em;
    line-height: 1.19em;
}
a {
    color: inherit;
    text-decoration: none;
}
/*** Card Left & Right ***/
.card-content-left {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-left: 15px;
}
.card-content-right {
    display: flex;
    flex-direction: row;
}
.card-border {
    background-color: var(--fourth-color);
    border-radius: 20px;
    box-shadow: 1px 1px 2px 2px rgb(234, 231, 231);
    
}
/*** Header ***/
.header-nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 1em;
}
.img-logo {
    margin-left: 1.9em;
    height: 1.2em;
}
.link-navigation {
    list-style-type: none;
    display: flex;
}
.link-navigation a {
    margin-right: 3.5em;
    font-weight: 500;
    font-size: 1em;
    line-height: 1.18em;
    color: #000;
    padding: 0 25px;
}
.link-navigation a:hover {
    border-top: 2px var(--first-color) solid;
    color: var(--first-color);
    width: 100%;
    padding-top: 1.9em;
}
/*** Main ***/
/*** Top Section ***/
.top-section {
    padding: 0 30px;
}
.top-section h1 {
    margin: 1em 0 0.3em;
}
.info-top-section {
    margin: 1.5em 0 ;
}
.top-section .form {
    margin: 1em 0 1.75em;
}
/*** Search Bar ***/
.search-bar {
    outline: none;
    width: fit-content;
    border-radius: 5px;
    display: flex;
}
.search-bar i {
    background-color: var(--third-color);
    padding: 5px 15px;
    border-radius: 15px 0 0 15px;
    display: flex;
    align-items: center;
    margin: 0;
}
input {
    border: 2px solid var(--third-color);
    height: 2.44em;
}
input::placeholder {
    color: #000;
}
.btn-search-bar {
    border: none;
    padding: 5px 15px;
    background-color: var(--first-color);
    color: var(--fourth-color);
    border-radius: 0 15px 15px 0;
}
.filter {
    display: flex;
    align-items: center;
    margin-bottom: 10px;
}
.filter p {
    margin-right: 25px;
}
.filter button {
    height: 50px;
    border-radius: 25px;
    border: 2px solid var(--third-color);
    cursor: pointer;
    padding: 0 20px;
    margin-right: 25px;
    background-color: var(--fourth-color);
}
.filter button i {
    margin-right: 10px;
    color: var(--first-color);
}
.filter button:hover {
    background-color: var(--second-color);
}
.fa-icon {
    border: 2px solid var(--third-color);
    border-radius: 50%;
    color: var(--first-color);
    padding-top: 3px;
    margin-right: 10px;
    width: 24px;
    height: 24px;
    text-align: center;
}
.glass-icon {
    display: none;
}
/*** First Section ***/
.first-section {
    display: flex;
    justify-content: space-evenly;
    width: 100%;
}
.first-section h3 {
    font-size: 1em;
}
/*** Left-section Location ***/
.left-section {
    background: var(--third-color);
    border-radius: 20px;
    width: 65%;
    display: flex;
    flex-direction: column;
}
.title-left-section {
    margin: 1.25em 0 0 1.5em;
}
.card-left-section {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
}
.add-more-link {
    color: #000;
    font-weight: 700;
    font-size: 1.12em;
    margin: 15px 0 30px 25px;
}
/*** Card Location ***/
.card-location {
    margin: 1em 0;
}
.card-location h3, p, i {
    margin: 3px 0;
}
.card-location img {
    width: 246px;
    height: 124px;
    margin: 5px;
    border-radius: 20px 20px 0 0;
    object-fit: cover;
}
.stars-location {
    color: var(--first-color);
    margin: 0.25em 0;
    font-size: 0.8em;
}
.fa-grey {
    color: var(--third-color)
}
/*** Right-section Popularity ***/
.right-section {
    background: var(--third-color);
    width: 30%;
    border-radius: 20px;
}
.title-right-section {
    width: 95%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 1em 0 0 1.5em;
}
.title-right-section i {
    color: var(--first-color);
    margin-right: 2em;
}
.card-right-section {
    height: 80%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
}
/* Card Popularity */
.card-popularity {
    width: 90%;
    height: 144px;
}
.card-popularity img {
    width: 137px;
    height: 133px;
    border-radius: 20px 0 0 20px;
    object-fit: cover;
    border: 5px var(--fourth-color) solid;
}
.card-text-right {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    margin: 0 10px;
}
.card-text-right h3 {
    margin: 0;
}
/*** Second Section ***/
.second-section {
    padding: 30px;
}
/* Card Activity */
.activity-section {
    display: flex;
    justify-content: space-between;
    width: 100%;
}
.card-activity {
    width: 23%;
}
.card-activity img {
    width: 100%;
    height: 380px;
    border-radius: 20px 20px 0 0;
    object-fit: cover;
}
.title-activity {
    font-size: 1em;
    padding-left: 15px;
}
/*** Footer ***/
.footer {
    background: var(--third-color);
    margin: 40px 31px 0;
}
.footer h2 {
    font-size: 1.1em;
}
.link-footer {
    width: 100%;
    display: flex;
    justify-content: space-around;
    padding: 30px 0;
}
.link-footer ul {
    padding: 0;
}
.link-footer li {
    list-style-type: none;
    margin-top: 0.6em;
    font-size: 0.9em;
}
/***** MEDIA QUERIES *****/
/*** Mode Tablette ***/
@media screen and (max-width: 992px) {
    /*** Header ***/
    .navigation {
        padding: 30px 30px 15px 30px;
    }
    /*** Search Bar ***/
    .form i {
        margin-bottom: 0;
    }
    /*** Tag ***/
    .tag {
        width: 100%;
        display: flex;
    }
    /*** Main Section ***/
    .first-section {
        flex-direction: column;
        align-items: center;
    }
    /*** Card ***/
    .card-content {
        margin-left: 10px;
    }
    .card-location, .card-popularity {
        font-size: 0.87em;
    }
    /*** Left Section ***/
    .left-section {
        width: 95%;
        margin-bottom: 50px;
    }
    .card-location {
        width: 28%;
    }
    .card-location img {
        width: 96%;
    }
    /*** Right Section ***/
    .right-section {
        width: 95%;
    }
    .title-right-section {
        width: 95%;
        margin: 0 24px;
        justify-content: space-between;
    }
    .card-right-section {
        flex-direction: row;
        justify-content: space-around;
        width: 100%;
    }
    .card-popularity {
        width: 230px;
    }
    .card-popularity img {
        border-radius: 20px 0 0 20px;
        width: 100px;
    }
    /*** Card Activity ***/
    .activity-section {
        width: 100%;
        justify-content: space-between;
    }
    .activity-section div {
        width: 20%;
    }
    .activity-section img {
        width: 100%;
        height: 250px;
    }
    .title-activity {
        margin: 5px;
        padding-left: 10px;
    }
}
/*** Mode Mobile ***/
@media screen and (max-width: 768px) {
    /*** Header ***/
    .header-nav {
        flex-direction: column;
    }
    .navigation {
        padding: 0;
        border-bottom: 3px solid var(--third-color);
    }
    .img-logo {
        padding: 20px 0 40px 0;
    }
    .link-navigation {
        display: flex;
        width: 100%;
    }
    .link-navigation a {
        padding-bottom: 30px;
        margin: 0;
        width: 100%;
        text-align: center;
    }
    .link-navigation a:hover {
        border-top: none;
        border-bottom: 3px var(--first-color) solid;
        padding-top: 0;
    }
    /*** Main ***/
    .top-section {
        padding: 0 15px;
    }
    .top-section h1 {
        margin-bottom: 10px;
        line-height: 1em;
    }
    /*** Search bar & Filter ***/
    .top-section .form {
        margin: 20px 0;
        display: flex;
        justify-content: center;
    }
    .filter {
        flex-direction: column;
        align-items: stretch;
        width: 100%;
    }
    .filter h4 {
        margin: 0;
        width: 100%;
    }
    .filter button {
        width: 40%;
        padding: 0;
        margin: 10px 0;
        font-size: 0.8em;
    }
    .tag {
        flex-wrap: wrap;
        justify-content: space-around;
    }
    .search-bar button i {
        color: var(--fourth-color);
        background-color: var(--first-color);
    }
    .glass-icon {
        display: initial;
        border: none;
        background-color: var(--first-color);       
        border-radius: 0 15px 15px 0;
    }
    .btn-search-bar {
        display: none;
    }
    /*** First Section ***/
    .first-section {
        flex-direction: column-reverse;
    }
    /*** Left Section ***/
    .left-section {
        background-color: var(--fourth-color);
        width: 100%;
        padding: 0;
        align-items: center;
    }
    .title-left-section {
        width: 92%;
        margin: 0;
    }
    .card-left-section {
        flex-direction: column;
        width: 90%;
    }
    .card-location {
        width: 100%;
        margin: 0 0 20px;
    }
    .card-location img {
        width: 97.5%;
    }
    .add-more-link {
        display: none;
    }
    /*** Right Section ***/
    .right-section {
        width: 100%;
        border-radius: 0;
    }
    .card-right-section {
        flex-direction: column;
    }
    .card-popularity {
        width: 90%;
    }
    /*** Second Section ***/
    .second-section h2 {
        width: 50%;
        margin: 0;
        line-height: 1.2em;
    }
    .activity-section {
        flex-direction: column;
        align-items: center;
    }
    .activity-section div {
        width: 100%;
        margin-bottom: 20px;
    }
    .activity-section img {
        width: 100%;
        height: 150px;
    }
    .title-activity {
        margin: 10px;
    }
    /*** Footer ***/
    .footer {
        flex-direction: column;
        height: auto;
        padding-bottom: 32px;
        width: 100%;
        margin: 0;
    }
    .link-footer {
        flex-direction: column;
        margin-left: 20px;
    }
    .link-footer h3, li {
        margin-left: 16px;
    }
}

